# game-of-life

./: Cargo.toml  README.md  build.sh
android-project/app/: build.gradle
android-project/app/jni/: Android.mk  CMakeLists.txt
android-project/app/jni/src/: Android.mk
src/: core.rs  ffmpeg.rs  lib.rs  main.rs  utils.rs
