[package]
name = "rust-game-of-life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
ctrlc = "3.4.4"
humantime = "2.1.0"
random_choice = "0.3.2"
sdl3 = { version = "0.5.0", features = ["ttf", "bundled"], default-features = false}

[package.metadata.vcpkg]
dependencies = ["sdl3", "sdl3-ttf"]
git = "https://github.com/microsoft/vcpkg"
rev = "7f9f0e44db287e8e67c0e888141bfa200ab45121"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }

[profile.release]
opt-level = 3
