[package]
name = "rust-game-of-life"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.153"
random_choice = "0.3.2"
sdl2 = { version = "0.36.0", features = ["ttf"] }

[package.metadata.vcpkg]
dependencies = ["sdl2"]
git = "https://github.com/microsoft/vcpkg"
rev = "7f9f0e44db287e8e67c0e888141bfa200ab45121"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }

[profile.release]
opt-level = 3
