[package]
name = "rust-game-of-life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["cargo", "derive"] }
ctrlc = "3.4.4"
humantime = "2.1.0"
random_choice = "0.3.2"
sdl2 = { version = "0.36.0", features = ["use-vcpkg", "static-link", "ttf"] }

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-ttf"]
git = "https://github.com/microsoft/vcpkg"
rev = "d567b667adba0e72c5c3931ddbe745b66aa34b73"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }

[profile.release]
opt-level = 3
